# wiki-kg

./: .gitignore  env.example  pyproject.toml
analysis/: fineweb_bucket_distribution.json
analysis/kggen_estimates/: estimates.json  gpt-5-nano-medium-estimates.json  gpt-5-nano-minimal-estimates.json  summary.json
src/wiki_kg/: __init__.py  main.py
src/wiki_kg/processing/: retrieve.sh
src/wiki_kg/processing/1_download/: _2_list_snapshots.py  _3_download_to_gcp.py  _3_download_to_s3.py  available_snapshots.json  download_to_s3.py  list_snapshots.py  run_setup.py  wm_enterprise_token.json
src/wiki_kg/processing/2_extraction/: assets.md  compiled_ref_words.json  run_extraction.py
src/wiki_kg/processing/3_filtering/: language_scripts.csv  run_filtering.py
src/wiki_kg/processing/4_upload/: upload_hf.py
src/wiki_kg/processing/5_generate/: _1_generate_kg.py  _2_merge.py
src/wiki_kg/scripts/: _2_kggen_samples.py  _3_estimate_tokens.py  _3_group_samples_estimates.py  _4_estimate_price.py  _4_estimate_tokens.py  _5_estimate_price.py  estimate_kggen.py  finewiki_analysis.py
