[project]
name = "wiki-kg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "kg-gen>=0.4.0",
    "matplotlib>=3.10.7",
    "requests>=2.32.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
wiki-kg = "wiki_kg.main:main"
