[project]
name = "wiki-kg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "datatrove>=0.6.0",
    "gcsfs>=2025.10.0",
    "kg-gen @ git+https://github.com/stair-lab/kg-gen.git@feature/deduplication-options",
    "matplotlib>=3.10.7",
    "mwparserfromhtml>=2.0.0",
    "numpy>=2.0.0",
    "requests>=2.32.5",
    "ruff>=0.14.5",
    "seaborn>=0.13.0",
    "tqdm>=4.67.1",
    "ty>=0.0.1a27",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
